# abm_dm_impact

./: .gitignore  README.md  base_model.py  environment.yml  minimal_model.ipynb  minimal_model_agentpy.py  pyproject.toml  requirements.txt  run.py
abm/: agent.py  data_magic.py  generate_data.py  model.py  utils.py
abm/data/: income_is.csv  ppd_intersect.csv  values_init.pickle
abm_copy/: delta_function.ipynb  minimal_model copy.ipynb
abm_copy/.ipynb_checkpoints/: minimal_model copy-checkpoint.ipynb
ap_output/VirusModel_1/: info.json  reporters.csv
ap_output/VirusModel_2/: info.json
ap_output/VirusModel_3/: reporters.csv
ap_output/VirusModel_4/: parameters_log.json  reporters.csv
ap_output/VirusModel_5/: info.json  reporters.csv
ap_output/VirusModel_6/: info.json  reporters.csv
ap_output/VirusModel_7/: info.json  parameters_log.json  reporters.csv
ap_output/VirusModel_9/: info.json
basic/: agent.py  clf.pkl  clf.py  clf_x.txt  clf_y.txt  data_magic.py  generate_data.py  model.py  run.py  test_job.sh  utils.py
basic/data/: distributions_init.pickle  ppd_intersect.csv  total_n.csv
basic/evals/: mlp_proba_appeal.ipynb  mlp_vs_clf.ipynb  mlp_vs_clf_proba.ipynb  viz.ipynb
basic/notebooks/: adv_clf.ipynb  bureaucratics.ipynb  clf_proof_of_concept.ipynb  delta_function.ipynb  delta_function_appeal.ipynb  delta_function_clf.ipynb  distributions.ipynb  expi_fraud_clf.ipynb  (+3 more)
ma_abm/: model.py
minimal/: run.py  utils.py
notebooks/: delta_function copy.ipynb  delta_function.ipynb  minimal_model.ipynb  sensitvity_wealth.ipynb
stuff/: base_model.py
(+14 files in other folders)
