[tool.poetry]
name = "fairness-abm"
version = "0.1.0"
description = ""
authors = ["Le-Ty <l.ty@gmx.de>"]
readme = "README.md"
packages = [{include = "fairness_abm"}]

[tool.poetry.dependencies]
python = "^3.10"
ipysimulate = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
